--- a/_config.yml
+++ b/_config.yml
@@ -34,21 +34,21 @@ facebook: username
   #ad-slot:
 #bing-verify:
 github: johndpotts
-stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin: username
+#stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
+linkedin: jdpotts189
 #xing: username
-instagram: username
-lastfm: username
-tumblr: username
+#instagram: username
+#lastfm: username
+#tumblr: username
 #pinterest: username
 #foursquare: username
-steam: username
+#steam: username
 #dribbble: username
-youtube: username
+#youtube: username
 #soundcloud: username
 #weibo: username
 #flickr: username
-#codepen: username
+codepen: johndpotts
 
 # Paginate
 # if you don't need pagination, comment the *paginate* configs below
@@ -57,7 +57,7 @@ youtube: username
 
 
 # Comments
-disqus_shortname: alperenbozkurt-net
+disqus_shortname: johndpotts
 
 
 # Gems
